// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no token permission renders only manual install 1`] = `
.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c11 {
  box-sizing: border-box;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #651FFF;
}

.c14:active {
  background: #354AA4;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #2C3A73;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c9:hover,
.c9:focus {
  background: #222C59;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: rgba(255,255,255,0.87);
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-right: 16px;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding: 8px;
  background-color: #010B1C;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 500px;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c15 {
  box-sizing: border-box;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="sc-fzqBZW c4"
      >
        <div
          class="c5"
          color="text.primary"
        >
          Add a Server
        </div>
      </div>
      <div
        class="sc-fzqBZW c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            Step 1: Download and Install tctl
          </div>
          <a
            class="c9 c10"
            href="https://get.gravitational.com/teleport-v5.0.0-dev-darwin-amd64-bin.tar.gz"
            kind="primary"
            target="_blank"
          >
            Mac
          </a>
           
          |
          <a
            class="c9 c10"
            href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-amd64-bin.tar.gz"
            kind="primary"
            target="_blank"
          >
            Linux 64-bit
          </a>
           
          |
          <a
            class="c9 c10"
            href="https://get.gravitational.com/teleport-v5.0.0-dev-linux-386-bin.tar.gz"
            kind="primary"
            target="_blank"
          >
            Linux 32-bit
          </a>
        </div>
        <div
          class="c11"
        >
          <div
            class="c8"
          >
            Step 2: Generate a new node invite token
          </div>
          <div
            class="sc-fzqBZW c12"
          >
            <div
              class="c13"
              style="word-break: break-all;"
            >
              tctl nodes add
            </div>
            <button
              class="c14"
              kind="primary"
            >
              Copy
            </button>
          </div>
        </div>
      </div>
      <div
        class="c15"
      >
        <button
          class="c16"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`success state 1`] = `
.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #2C3A73;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #651FFF;
}

.c19:active {
  background: #354AA4;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c18 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c18:hover,
.c18:focus {
  background: #222C59;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 24px;
  color: rgba(255,255,255,0.87);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 24px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-right: 16px;
}

.c5 {
  box-sizing: border-box;
  flex: 0 0 auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
}

.c17 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding: 8px;
  background-color: #010B1C;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-family: "Droid Sans Mono","monospace",monospace,"Droid Sans Fallback";
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  max-width: 600px;
  width: 100%;
  min-height: 330px;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.c20 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  font-size: 15px;
  font-weight: bold;
  padding: 5px 8px;
  cursor: pointer;
  margin-left: 15px;
  border-bottom: 4px solid transparent;
  border-bottom: 4px solid #651FFF;
  opacity: 1;
}

.c8 span {
  margin-right: 8px;
}

.c10 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  font-size: 15px;
  font-weight: bold;
  padding: 5px 8px;
  cursor: pointer;
  margin-left: 15px;
  border-bottom: 4px solid transparent;
}

.c10 span {
  margin-right: 8px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4"
        color="text.primary"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            Add a Server
          </div>
          <div
            class="c7"
          >
            <div
              class="c8"
            >
              <span
                class="c9 icon icon-cog "
                color="light"
              />
              Automatic
            </div>
            <div
              class="c10"
            >
              <span
                class="c9 icon icon-cog "
                color="light"
              />
              Manual
            </div>
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          Use the auto installer script to add a server to your cluster.
        </div>
        <div
          class="c13"
        >
          Auto-Installing Script
        </div>
        <div
          class="c14"
        >
          <div
            class="c15"
            style="word-break: break-all;"
          >
            sudo bash -c "$(curl -sSL http://localhost/scripts/onokdisauhimefamacul/install-node.sh)"
          </div>
          <button
            class="c16"
            kind="primary"
          >
            Copy
          </button>
        </div>
        <div
          class="c17"
        >
          <a
            class="c18 c19"
            kind="primary"
          >
            Regenerate Script
          </a>
          <div
            class="c6"
          >
            Script Expires in 
            4h0m0s
          </div>
        </div>
      </div>
      <div
        class="c20"
      >
        <button
          class="c21"
          kind="secondary"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
